@@ -1,5 +1,16 @@
 Version Changes for Hypermail
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Peter McCluskey (Mar 22 2001)
+  - Fixed problem with GDBM defines.
+  - Improved speed by replacing O(N^2) code in these functions with
+   code that is at least typically close to O(N):
+      addreply, crossindexthread1, crossindexthread2, nextinthread,
+      writearticles (if set_showreplies)
+   Accidentally improved threading under linkquotes option in the process.
+   Overall performance probably scales up linearly with the number of
+   messages under normal conditions (but not with linkquotes, which has other
+   performance problems as well). Code is ifdef'd under FASTREPLYCODE for now.
+
 Peter McCluskey (Mar 19 2001)
   - Added new usegdbm and append options from Scott Rose.
 
